Add ES6 modues to index + remove wast from index

--- a/_includes/index.html
+++ b/_includes/index.html
@@ -21,8 +21,9 @@
   <li>Interfacing with the browser
     <ul>
       <li><a href="{{site.baseurl}}/pages/Interoperability-with-web-frameworks-(Vue,-Reactor,-Angular)">Interoperability with web frameworks (Vue, Reactor, Angular)</a></li>
+      <li><a href="{{site.baseurl}}/pages/ES6-Modules">ES6 Modules</a></li>
       <li><a href="{{site.baseurl}}/pages/CommonJS-Modules">CommonJS Modules</a></li>
-      <li><a href="{{site.baseurl}}/pages/WebAssembly-output-(wasm-or-wast-mode)">WebAssembly output (wasm or wast mode)</a></li>
+      <li><a href="{{site.baseurl}}/pages/WebAssembly-output">WebAssembly output</a></li>
     </ul>
   </li>
   <li>Deep dives
